# sotr-muon-ablation

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Makefile  PROTOCOL.md  README.md  pyproject.toml
.github/workflows/: lint.yml
.planning/: train_py_vendor_plan.md
cot-go-transformer/: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  pyproject.toml
cot-go-transformer/.github/workflows/: ci.yml
cot-go-transformer/configs/: baseline_30m.yaml  smoke.yaml
cot-go-transformer/docs/: nl_cot.md  phase0_plan.md  phase1_plan.md  setup_fir.md
cot-go-transformer/gogpt/: __init__.py  concepts.py  cot_extractor.py  cot_vocab.py  data.py  eval.py  inference.py  katago.py  model.py  nl_rewriter.py  render.py  tokenizer.py  train.py
cot-go-transformer/scripts/: extract_cot_labels.py  generate_selfplay.py  rewrite_cot_natural.py  smoke_test.sh
cot-go-transformer/scripts/slurm/: generate_data.slurm  train_baseline.slurm  train_smoke.slurm
cot-go-transformer/tests/: conftest.py  test_attention_mask.py  test_concepts.py  test_cot.py  test_data_pipeline.py  test_extract_cot_labels.py  test_katago_smoke.py  test_nl_rewriter.py  test_render.py  test_smoke_forward.py  test_tokenizer.py
docs/: ARCHITECTURE.md  CLUSTER.md  EXPERIMENTS.md  PHASE1.md  PHASE2.md
experiments/: README.md  _configs.py  _logging.py  _run_id.py  train.py
experiments/analysis/: phase2_summary.py
experiments/configs/: __init__.py  _phase2_base.py  phase1_repro_muon.py
experiments/configs/phase2/: index.txt
experiments/scripts/: gen_phase2_configs.py
knowledge/: 00_index.md  01_muon_landscape.md  02_muon_scalability.md  03_sotr_design.md  04_proposals_existing.md  05_open_directions.md  06_lit_update_2026_05.md  07_spectral_interpretation.md  08_muonbp_block_periodic.md  09_demo_decoupled_momentum.md
optimizers/: README.md  __init__.py  sotr.py
scripts/: README.md  ablation_status.sh  setup.sh  setup_drac.sh
scripts/slurm/: array_ablation.sh  multi_gpu.sh  phase1_modded_nanogpt.sh  single_gpu.sh
tests/: README.md  conftest.py
tests/fixtures/: generate_references.py  lion_reference.pt  muon_reference.pt
tests/sanity/: test_determinism.py  test_lion_match.py  test_muon_match.py  test_param_groups.py  test_sanity_coverage.py  test_sotr_limits.py  test_spectral_identity.py  test_trust_region.py
tests/unit/: test_logging.py  test_phase2_analysis.py
