[project]
name = "optimizer-experiments"
version = "0.0.1"
description = "Soft-Orthogonal Trust Region (SOTR) and Muon-family optimizer research"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Rohit Singla", email = "rsingla@ece.ubc.ca" },
]

# Match modded-nanogpt's locked versions where it matters for our comparison
# harness. external/modded-nanogpt is pinned at dd2224b (2024-10-29 era);
# its own requirements.txt (numpy, tqdm, torch, huggingface-hub) is installed
# separately by scripts/setup_drac.sh / scripts/setup.sh.
dependencies = [
    "torch>=2.10",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-xdist>=3.5",
    "ruff>=0.7",
    "pre-commit>=4.0",
    "ipython>=8.20",
]
logging = [
    "wandb>=0.17",
    "tensorboard>=2.15",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["optimizers"]

# ----------------------------------------------------------------------------
# Linting / formatting (ruff replaces black + isort + flake8)
# ----------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py310"
# Vendored code (upstream style, marked with "Adapted from ..." header per
# CONTRIBUTING.md §"Comments") is exempt from our lint rules.
extend-exclude = [
    "external/",
    "knowledge/",
    "*.ipynb",
    "experiments/train.py",
]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort (import sorting)
    "B",     # bugbear (common bug patterns)
    "UP",    # pyupgrade (Python version-specific upgrades)
    "N",     # pep8-naming
    "SIM",   # simplify (suggests cleaner alternatives)
    "RUF",   # ruff-specific
    "PTH",   # use pathlib over os.path
    "PLE",   # pylint errors
]
ignore = [
    "E501",   # line length handled by formatter
    "E741",   # ambiguous variable name (we use M, O for matrices — math convention)
    "B008",   # function call in default argument (common torch idiom)
    "N803",   # argument name should be lowercase (we use M, O, U, V, Σ — math convention)
    "N806",   # variable in function should be lowercase (same)
    "N812",   # lowercase imported as non-lowercase (e.g., from torch import Tensor as T)
    "RUF001", # ambiguous unicode in strings — we use α, β, σ, Δ deliberately
    "RUF002", # ambiguous unicode in docstrings — same
    "RUF003", # ambiguous unicode in comments — same
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B007", "B011", "N802", "PLE1142"]   # asserts, unused loop counters, math-convention names in tests
"experiments/scripts/**" = ["E402"]        # late imports OK in entry-point scripts

[tool.ruff.lint.isort]
known-first-party = ["optimizers", "experiments"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ----------------------------------------------------------------------------
# Pytest
# ----------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = [
    "-ra",                    # show summary of skips/failures
    "--strict-markers",       # error on unknown markers
    "--strict-config",
    "-v",
]
markers = [
    "sanity: PROTOCOL §7 limit-case checks (gating, must pass before reporting)",
    "slow: tests > 5s (skip with -m 'not slow')",
    "gpu: requires CUDA-capable GPU",
]
filterwarnings = [
    "error",                                                       # warnings → errors by default
    "ignore::DeprecationWarning:torch.*",                          # torch deprecations
    "ignore::pytest.PytestUnraisableExceptionWarning",
]
