[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gogpt"
version = "0.0.1"
description = "CoT Go Transformer with mechanistic interpretability"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "torch>=2.3",
    "numpy>=1.26",
    "sgfmill>=1.1.2",
    "pyyaml>=6.0",
    "wandb>=0.17",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-xdist>=3",
    "ruff>=0.5",
    "mypy>=1.10",
]
# FlashAttention-2 and any SAE deps are installed out-of-band per cluster CUDA.

[tool.setuptools.packages.find]
include = ["gogpt*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]
